flux/infrastructure/landing-page/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: landing
  labels:
    name: landing
