flux/infrastructure/landing-page/ftp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vsftpd
  namespace: landing
  labels:
    app: vsftpd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vsftpd
  template:
    metadata:
      labels:
        app: vsftpd
    spec:
      nodeSelector:
        kubernetes.io/hostname: ip-192-168-100-11
      securityContext:
        fsGroup: 1000
      containers:
        - name: vsftpd
          image: stilliard/pure-ftpd:latest
          resources:
            limits:
              cpu: 200m
              memory: 256Mi
            requests:
              cpu: 50m
              memory: 128Mi
          ports:
            - containerPort: 21
              name: ftp
              protocol: TCP
            - containerPort: 20
              name: ftp-data
              protocol: TCP
          volumeMounts:
            - name: data
              mountPath: /data
            - name: puredb
              mountPath: /etc/pure-ftpd/pureftpd.pwd
            - name: puredb
              mountPath: /etc/pure-ftpd/pureftpd.pdb
          livenessProbe:
            exec:
              command:
                - /bin/sh
                - -c
                - nc -z localhost 21
            initialDelaySeconds: 10
            periodSeconds: 5
            failureThreshold: 30
          securityContext:
            allowPrivilegeEscalation: true
            capabilities:
              add:
                - NET_BIND_SERVICE
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: ftp-data
        - name: puredb
          emptyDir: {}
