flux/infrastructure/landing-page/ftp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vsftpd
  namespace: landing
spec:
  selector:
    app: vsftpd
  ports:
    - name: ftp
      port: 21
      targetPort: 21
      protocol: TCP
    - name: ftp-data
      port: 20
      targetPort: 20
      protocol: TCP
